# 6DOF_ObjectFollowing

./: README.md  UR5_C.txt  UR5_G.txt  UR5_Jacobian.txt  UR5_M.txt  UR5_T.txt  dep.repos  parabolic_trajectory.csv
.devcontainer/: devcontainer.json  rosPkgs.list
ball_follower/: package.xml  setup.cfg  setup.py
ball_follower/ball_follower/: ball_follower.py
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/config/: rosbag_record.yaml  ur.yaml
robot_bringup/config/ur5/: visual_parameters.yaml
robot_bringup/launch/: robot.launch.py
robot_bringup/rviz/: ur.rviz
robot_bringup/urdf/: ur.urdf.xacro  ur_macro.xacro
